hphp/hack/test/enum_class_label/typing/closure.php.exp
File "closure.php", line 29, characters 17-23:
Invalid argument (Typing[4110])
  File "closure.php", line 16, characters 21-23:
  Expected `int`
  File "closure.php", line 6, characters 3-8:
  But got `string`
File "closure.php", line 34, characters 10-14:
Enum class label/member mismatch (Typing[4110])
  File "closure.php", line 13, characters 17-33:
  Expected `HH\MemberOf<E, #38038>`
  File "closure.php", line 34, characters 10-14:
  But got an enum class label: `#Name`
File "closure.php", line 38, characters 30-31:
An enum class label is required here. (Typing[4397])
File "closure.php", line 40, characters 55-56:
An enum class label is required here. (Typing[4397])
File "closure.php", line 43, characters 69-70:
An enum class label is required here. (Typing[4397])
